--- a/resources/views/sample.html
+++ b/resources/views/sample.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp" />
+    <meta name="ROBOTS" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halaman Page {{ .Page }}</title>
     <style>
         body {
