--- a/resources/views/welcome.html
+++ b/resources/views/welcome.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp" />
     <meta name="ROBOTS" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>Welcome to Legit Framework</title>
     <style>
         body {
